Update with jdk.attach.allowAttachSelf=true for JDK11